# pyhector

./: .bandit.yml  .coveragerc  .gitattributes  .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  .travis.yml  .zenodo.json  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  MANIFEST.in  Makefile  README.md  README.rst  RELEASING.md  RELEASING.rst  dev-requirements.txt  environment.yml  index.ipynb  pyproject.toml  setup.cfg  setup.py
.github/: main.workflow
.github/workflows/: create.yml  push.yml
docs/: Makefile  conf.py  development.rst  index.rst  pyhector.rst  requirements.txt  usage.rst
docs/sources/: emissions_mapping.py  output_variables.py  units_dict.py
docs/static/: emissions_mapping.inc  output_variables.inc  units_dict.inc
docs/windows/: installation.md
examples/: pyhector.ipynb
include/: Hector.h  Observable.h
notebooks/: index.ipynb
paper/: Makefile  codemeta.json  latex.template  paper.bib  paper.md
pyhector/: __init__.py  _version.py  constants.py  default_config.py  emissions.py  output.py  rcp_default.ini  ssp_default.ini  units.py
pyhector/emissions/: RCP26_emissions.csv  RCP45_emissions.csv  RCP6_emissions.csv  RCP85_emissions.csv  __init__.py
scripts/: compile_hector.sh  plot_example.py  run_hector_with_rcps.sh  run_hector_with_ssps.sh  write_constants_py.sh  write_default_config.py  write_defaults.py
src/: Hector.cpp  Observable.cpp  main.cpp
tests/: test.py  test_hector_comparison.py  test_pyhector.py
tests/data/: lawdome_co2.csv  outputstream_rcp26.csv  outputstream_rcp45.csv  (+2 more)
(+11 files in other folders)
