[build-system]
requires = ["setuptools", "pandas", "numpy", "pybind11", "versioneer"]
build-backend = "setuptools.build_meta"

[tool.versioneer]
VCS = "git"
parentdir_prefix = "pyhector-"
style = "pep440"
tag_prefix = "v"
versionfile_build = "pyhector/_version.py"
versionfile_source = "pyhector/_version.py"
